# AXION-POC

./: PLANO_IMPLEMENTACAO.md  README.md
docs/: CODING_STANDARDS.md  api-reference.md  architecture.md  build-and-run.md  configuration.md  hardware.md  testing.md
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.atom-a  sdkconfig.atom-b  sdkconfig.atom-c  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  axion_config.h  ble_scan.c  ble_scan.h  display.c  display.h  font5x5.h  main.c  net.c  net.h  rssi_filter.c  rssi_filter.h
server/app/: config.py  db.py  main.py  models.py  zones.py
server/static/: app.css  beacons.html  index.html
server/tests/: test_zones.py
tools/: mock_api.py  simulator.py
